2007-09-18  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-storm-procs.tcl: Added a first version of the
          scenario-based testing framework as proposed by Mark
          Strembeck. It will be used for future test writing and at
          some point for developer support.

	* tcl/xorb-interceptors-procs.tcl: Added the revised
          interceptor infrastructure, now organised in an own
          *-procs.tcl file. Changed package param "interceptor_config"
          to "chain_of_interceptors".

	* tcl/20-xorb-procs.tcl: Cleaned up, i.e. chunks of commented
          and outdated code.

	* Pitched trunk to 0.4.1

2007-09-14  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/10-xorb-exceptions-procs.tcl: Partial rewrite of
          exception handling, now streaming into versatile xml and
          being more careful to preserve the original error stack
          (errorInfo). 

2007-09-13  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-context-procs.tcl: Added support for adding/removing
          context data from invocation contexts (setData/getData).

	* tcl/xorb-stub-procs.tcl: Added support for adding/removing
          context data from invocation contexts (setData/getData).

2007-09-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-package-procs.tcl: Fixed a missing exception type
          (PackageException).

2007-09-10  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Updated documentation slightly on new configuration parameters.

2007-09-09  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/20-xorb-procs.tcl: Shifted the package parameter
          interceptor_config to the xorb level (would not make sense
          at the xosoap level).

	* tcl/xorb-package-procs.tcl: Fixed the parameter resolution
          mechanism between protocol packages and the singleton xorb
          package.

2007-09-07  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>
